# Home_Perceiver

./: .flake8  .gitignore  0.15.2  README.md  README.tex  mac_cam_server.py  main.py  pyproject.toml  requirements.txt
Template/: biblio.bib  conclusions.tex  dataset_training.tex  intro.tex  model.tex  related.tex  results.tex  template 2.fdb_latexmk  template 3.aux  template.aux  template.bbl  template.blg  template.fdb_latexmk  template.fls  template.out  template.tex
core_utils/: data_loader.py  exporter.py
datasets/homeobjects-3K/labels/: train.cache  val.cache
detector/: detect.py  mask_utils.py  yolo_utils.py
pose/: pose.py  pose_utils.py
runs/detect/train/: args.yaml  results.csv
scripts/: demo_modeA.py  demo_modeB.py  detect_multiclass.py
tests/: test_pipeline.py
tools/: aggregate_runs.py  analyze_run.py  build_report.py  template.tex
tracker/: tracker.py
visual_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
