[project]
name            = "visual_detection"
version         = "0.1.0"
description     = "Real-time visual detection pipeline with YOLO, pose estimation, and tracking."
readme          = "README.md"
license         = { file = "LICENSE" }
authors         = [{ name = "Antonio Tangaro", email = "antonio.tangaro@studenti.unipd.it" }]
keywords        = ["computer-vision", "yolo", "pose-estimation", "tracking"]
requires-python = ">=3.11,<3.12"

dependencies = [
  "torch>=2.5.1,<2.6",
  "torchvision>=0.20.1,<0.21",
  "torchaudio>=2.5.1,<2.6",
  "opencv-python>=4.10.0,<5.0",
  "numpy>=2.2.5,<3.0",
  "pandas>=2.2.3,<3.0",
  "scipy>=1.15.3,<2.0",
  "matplotlib>=3.10.3,<4.0",
  "pyyaml>=6.0.2,<7.0",
  "tqdm>=4.66.0,<5.0"
]

[project.optional-dependencies]
report = ["jinja2>=3.1.6,<4.0", "seaborn>=0.13.2,<0.14"]

[project.scripts]
demo_modeA       = "scripts.demo_modeA:main"
demo_modeB       = "scripts.demo_modeB:main"
detect_multiclass = "scripts.detect_multiclass:main"

[build-system]
requires       = ["setuptools>=65", "wheel>=0.45"]
build-backend  = "setuptools.build_meta"

[tool.setuptools]
packages = ["core_utils", "detector", "pose", "tracker", "scripts"]

[tool.setuptools.package-data]
weights   = ["*.pt"]
notebooks = ["*.ipynb"]